--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "ts-loader": "^9.3.1",
@@ -28,6 +30,7 @@
     "start": "live-server"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "webpack-cli": "^4.10.0"
   }
 }
