--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "0.1.16",
-    "@fortawesome/fontawesome-common-types": "^0.3.0",
     "@hookform/resolvers": "^2.9.7",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
@@ -22,6 +22,7 @@
     "react-dropzone": "^14.2.2",
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.34.2",
+    "react-loader-spinner": "^5.3.4",
     "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
